2009-07-22  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Ide.FindInFiles/SearchResultWidget.cs: Fixed
	  "Bug 523941 - Highlighted strings in search results are
	  invisible".

2009-07-22  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Ide.FindInFiles/Commands.cs:
	* MonoDevelop.Ide.FindInFiles/FindInFilesDialog.cs: Fixed 'Bug
	  523851 - Find in Files dialog should not be modal'.

2009-07-22  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Ide.Gui.OptionPanels/AuthorInformationPanel.cs:
	  Save preferences after changing author info.

	* MonoDevelop.Ide.Gui/RootWorkspace.cs: Set the preferences
	  for the root workspace item after loading.

2009-07-22  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Ide.Gui/Workbench.cs: Notify file creations when
	  focusing MD.

2009-07-22  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Ide.Gui/Workbench.cs: Keep track of file changes
	  when MD loses/gains the focus.

2009-07-21  Lluis Sanchez Gual  <lluis@novell.com>

	* Makefile.am:
	* gtk-gui/gui.stetic:
	* MonoDevelop.Ide.csproj:
	* MonoDevelop.Ide.addin.xml:
	* MonoDevelop.Ide.Execution/MonoExecutionParameters.cs:
	* MonoDevelop.Ide.Execution/MonoExecutionCustomizer.cs:
	* gtk-gui/MonoDevelop.Ide.Gui.Dialogs.TipOfTheDayWindow.cs:
	* MonoDevelop.Ide.Gui.Dialogs/MonoExecutionParametersWidget.cs:
	* MonoDevelop.Ide.Gui.Dialogs/MonoExecutionParametersPreview.cs:
	* gtk-gui/MonoDevelop.Ide.Gui.Dialogs.CustomExecutionModeDialog.cs:
	* gtk-gui/MonoDevelop.Ide.Gui.Dialogs.MonoExecutionParametersWidget.cs:
	* gtk-gui/MonoDevelop.Ide.Gui.Dialogs.MonoExecutionParametersPreview.cs:
	  Added Mono Options customizer.

2009-07-21  Lluis Sanchez Gual  <lluis@novell.com>

	* options/KeyBindingSchemeVisualStudio.xml: Set correct
	  shortcuts for folding commands. Fixes bug #522255 - Key
	  shortcuts for code folding have inconsistent behaviour under
	  "Visual Studio" Key Bindings.

2009-07-21  Lluis Sanchez Gual  <lluis@novell.com>
