@@ -1,5 +1,11 @@
 2009-07-22  Mike Krüger  <mkrueger@novell.com>
 
+	* MonoDevelop.Ide.FindInFiles/Scope.cs: Search in files now
+	  support more than one file mask seperated by comma or
+	  semicolon.
+
+2009-07-22  Mike Krüger  <mkrueger@novell.com>
+
 	* MonoDevelop.Ide.FindInFiles/SearchResultWidget.cs: Fixed
 	  "Bug 523941 - Highlighted strings in search results are
 	  invisible".
